# pokerth

./: .gitignore  .qmake.stash  AndroidManifest.xml  CMakeLists.txt  CPackConfig.cmake  ChangeLog  DefineOptions.cmake  Doxyfile  INSTALL  PokerTH.appdata.xml  TODO  android-libpokerth.so-deployment-settings.json  build_win32.cmd  build_win64.cmd  chatcleaner.pro  chatcleaner.proto  connectivity.pro  dealer_random_test.pro  enginefactory.cpp  enginefactory.h  load.pro  localenginefactory.cpp  localenginefactory.h  mac_post_make.sh  pokerth.appdata.xml  pokerth.desktop  pokerth.icns  pokerth.kdevelop  pokerth.kdevelop.pcs  pokerth.kdevses  pokerth.pro  pokerth.proto  pokerth.rc  pokerth_common.pro  pokerth_db.cmake  pokerth_db.pro  pokerth_dbofficial.pro  pokerth_game.cmake  pokerth_game.pro  pokerth_lib.cmake  (+13 more)
.github/: FUNDING.yml
.github/workflows/: ci.yaml
cmake/Modules/: DefineCompilerFlags.cmake  FindGCrypt.cmake  FindGSasl.cmake  FindIrcclient.cmake  FindSDLMixer.cmake  QtCreatorResources.cmake  ResolveLibs.cmake
cmake/projects/: CMakeLists.txt
cmake/projects/chatcleaner/: CMakeLists.txt
cmake/projects/db/: CMakeLists.txt
cmake/projects/game/: CMakeLists.txt
cmake/projects/lib/: CMakeLists.txt
cmake/projects/server/: CMakeLists.txt
console/src/: ConsoleCallback.cs  GameInfo.cs  GameInfoList.cs  Hand.cs  ICallback.cs  IdObject.cs  Log.cs  Player.cs  PlayerInfo.cs  PlayerInfoList.cs  PokerTHData.cs  Program.cs  ServerSettings.cs  Settings.cs  ZlibHelper.cs
data/: CMakeLists.txt  data-copyright.txt
data/gfx/: stylesheet.xml
data/gfx/cards/default/: copyright.txt  defaultcarddeck.xml  defaultdeckstyle.xml
data/gfx/cards/default4c/: default4cdeckstyle.xml
data/gfx/cards/default_800x480/: defaultdeckstyle_800x480.xml
data/gfx/gui/misc/: .directory
data/gfx/gui/table/danuxi1/: cardholder_flop.xcf  danuxi1tablestyle.xml
data/gfx/gui/table/default/: action_template.xcf  copyright.txt  defaulttablestyle.xml  handranking_template.xcf
data/gfx/gui/table/default_800x480/: android_tablestyle_800x480.xml  defaulttablestyle_800x480.xml  handranking_template.xcf
data/misc/: agpl.html  flopValues  gpl2.html  preflopValues  third_party_libs.txt
data/sounds/default/: .directory
data/translations/: pokerth_af.qm  pokerth_bg.qm  pokerth_ca.qm  pokerth_cz.qm  pokerth_de.qm  pokerth_dk.qm  pokerth_eo.qm  pokerth_es.qm  pokerth_fi.qm  pokerth_fr.qm  pokerth_gd.qm  pokerth_gl.qm  pokerth_gr.qm  pokerth_hu.qm  pokerth_it.qm  pokerth_jp.qm  pokerth_lt.qm  pokerth_nl.qm  pokerth_no.qm  pokerth_pl.qm  pokerth_ptbr.qm  pokerth_ptpt.qm  pokerth_ru.qm  pokerth_sk.qm  pokerth_sv.qm  pokerth_ta.qm  pokerth_tr.qm  pokerth_vi.qm  pokerth_zhcn.qm  qt_de.qm  qt_es.qm  qt_fr.qm  qt_gl.qm  qt_nl.qm  qt_zh_CN.qm
docs/: build_mingw_windows.txt  build_vc_windows.txt  chatcleaner.asn1  gui_skinnig_howto.txt  gui_styling_howto.txt  infomessage-id-desc.txt  net_protocol.txt  pokerth.1  pokerth.asn1  pokerth.proto  server_setup_howto.txt  win32_rm_openssl.diff
docs/linux_build_scripts/: prepare_pokerth.sh
docs/win32_build_scripts/: pokerth_build.cmd  pokerth_download_libs.cmd  pokerth_download_libs64.cmd  readme.txt
src/: connectivity.cpp  dealer_random_test.cpp  deck.qrc  game.cpp  game.h  game_defs.h  gamedata.h  load.cpp  pch_game.h  pch_lib.h  playerdata.cpp  playerdata.h  pokerth.cpp  pokerth_server.cpp  serverdata.h  session.cpp  session.h  zlib_compress.cpp
src/chatcleaner/: badwordcheck.cpp  badwordcheck.h  capsfloodcheck.cpp  capsfloodcheck.h  chatcleaner.cpp  cleanerconfig.cpp  cleanerconfig.h  cleanerserver.cpp  cleanerserver.h  letterrepeatingcheck.cpp  letterrepeatingcheck.h  messagefilter.cpp  messagefilter.h  textfloodcheck.cpp  textfloodcheck.h  urlcheck.cpp  urlcheck.h
src/config/: configfile.cpp  configfile.h
src/core/: avatarmanager.h  convhelper.h  crypthelper.h  loghelper.h  openssl_wrapper.h  pokerthexception.h  rand.h  thread.cpp  thread.h  timermanager.h
src/db/: dbdefs.h  serverdbcallback.h  serverdbfactory.h  serverdbfactorygeneric.h  serverdbgeneric.h  serverdbinterface.h  serverdbnoaction.h
src/dbofficial/: asyncdbadminplayers.cpp  asyncdbadminplayers.h  asyncdbauth.cpp  asyncdbauth.h  asyncdbavatarblacklist.cpp  asyncdbavatarblacklist.h  asyncdbblockplayer.cpp  asyncdbblockplayer.h  asyncdbcreategame.cpp  asyncdbcreategame.h  asyncdbendgame.cpp  asyncdbendgame.h  asyncdbgameplace.cpp  asyncdbgameplace.h  asyncdblogin.cpp  asyncdblogin.h  asyncdbplayerlastgames.cpp  asyncdbplayerlastgames.h  asyncdbquery.cpp  asyncdbquery.h  asyncdbreportavatar.cpp  asyncdbreportavatar.h  asyncdbreportgame.cpp  asyncdbreportgame.h  asyncdbupdatescore.cpp  asyncdbupdatescore.h  compositeasyncdbquery.cpp  compositeasyncdbquery.h  db_table_defs.h  dbidmanager.cpp  dbidmanager.h  querycontext.cpp  querycontext.h  serverdbfactoryinternal.cpp  serverdbfactoryinternal.h  serverdbthread.cpp  serverdbthread.h  singleasyncdbquery.cpp  singleasyncdbquery.h
src/engine/: berofactoryinterface.cpp  berofactoryinterface.h  berointerface.cpp  berointerface.h  boardinterface.cpp  boardinterface.h  engine_defs.h  enginefactory.cpp  enginefactory.h  flopinterface.cpp  flopinterface.h  game.cpp  game.h  handinterface.cpp  handinterface.h  log.cpp  log.h  playerinterface.cpp  playerinterface.h  preflopinterface.cpp  preflopinterface.h  riverinterface.cpp  riverinterface.h  (+2 more)
templates/: h
tests/: common.scm  helper.scm  httpput.c  pkth.scm  pkth_config.scm  pkth_tests.scm  sock.scm  test.scm  timer.scm
ts/: pokerth_START_HERE.ts  pokerth_af.ts  pokerth_bg.qm  pokerth_bg.ts  pokerth_ca.ts  pokerth_cz.ts  pokerth_de.ts  pokerth_dk.ts  pokerth_eo.ts  pokerth_es.ts  pokerth_fi.ts  pokerth_fr.ts  pokerth_gd.ts  pokerth_gl.ts  pokerth_gr.ts  pokerth_hu.ts  pokerth_it.ts  pokerth_jp.ts  pokerth_lt.ts  pokerth_nl.ts  pokerth_no.ts  pokerth_pl.ts  pokerth_pt.ts  pokerth_ptbr.ts  pokerth_ptpt.ts  pokerth_ru.ts  pokerth_se.ts  pokerth_sk.ts  pokerth_sv.ts  pokerth_ta.ts  pokerth_tr.ts  pokerth_vi.ts  pokerth_zhcn.ts  qt_de.ts  qt_es.ts  qt_fr.ts  qt_gl.ts  qt_lt.ts  qt_nl.ts  qt_ru.ts  (+1 more)
(+898 files in other folders)
