project(pokerth_lib)

find_package(Qt5Qml REQUIRED)
find_package(Qt5Quick REQUIRED)

add_definitions(-DENABLE_IPV6 -DTIXML_USE_STL -DBOOST_FILESYSTEM_DEPRECATED)

include_directories(
    ${CMAKE_SOURCE_DIR}/src
    ${CMAKE_SOURCE_DIR}/src/engine
    ${CMAKE_SOURCE_DIR}/src/gui
    ${CMAKE_SOURCE_DIR}/src/gui/qt
    ${CMAKE_SOURCE_DIR}/src/gui/qt/qttools
    ${CMAKE_SOURCE_DIR}/src/net
    ${CMAKE_SOURCE_DIR}/src/engine/local_engine
    ${CMAKE_SOURCE_DIR}/src/engine/network_engine
    ${CMAKE_SOURCE_DIR}/src/config
    ${CMAKE_SOURCE_DIR}/src/core
    ${CMAKE_SOURCE_DIR}/src/third_party/websocketpp
    )

if(WIN32)
    add_definitions(-DCURL_STATICLIB -D_WIN32_WINNT=0x0501 -DHAVE_OPENSSL)
    include_directories(../boost/ ../GnuTLS/include ../gsasl/include
        ../curl/include ../zlib ../sqlite ../openssl/include)
endif(WIN32)

set(pokerth_lib_HDRS
    ${CMAKE_SOURCE_DIR}/src/engine/game.h
    ${CMAKE_SOURCE_DIR}/src/session.h
    ${CMAKE_SOURCE_DIR}/src/playerdata.h
    ${CMAKE_SOURCE_DIR}/src/gamedata.h
    ${CMAKE_SOURCE_DIR}/src/config/configfile.h
    ${CMAKE_SOURCE_DIR}/src/core/thread.h
    ${CMAKE_SOURCE_DIR}/src/core/crypthelper.h
    ${CMAKE_SOURCE_DIR}/src/core/avatarmanager.h
    ${CMAKE_SOURCE_DIR}/src/core/pokerthexception.h
    ${CMAKE_SOURCE_DIR}/src/engine/boardinterface.h
    ${CMAKE_SOURCE_DIR}/src/engine/enginefactory.h
    ${CMAKE_SOURCE_DIR}/src/engine/handinterface.h
    ${CMAKE_SOURCE_DIR}/src/engine/playerinterface.h
    ${CMAKE_SOURCE_DIR}/src/engine/berointerface.h
    ${CMAKE_SOURCE_DIR}/src/gui/guiinterface.h
    ${CMAKE_SOURCE_DIR}/src/net/chatcleanermanager.h
    ${CMAKE_SOURCE_DIR}/src/net/chatcleanercallback.h
    ${CMAKE_SOURCE_DIR}/src/net/clientcallback.h
    ${CMAKE_SOURCE_DIR}/src/net/clientcontext.h
    ${CMAKE_SOURCE_DIR}/src/net/clientexception.h
    ${CMAKE_SOURCE_DIR}/src/net/netcontext.h
    ${CMAKE_SOURCE_DIR}/src/net/clientstate.h
    ${CMAKE_SOURCE_DIR}/src/net/clientthread.h
    ${CMAKE_SOURCE_DIR}/src/net/genericsocket.h
    ${CMAKE_SOURCE_DIR}/src/net/netpacket.h
    ${CMAKE_SOURCE_DIR}/src/net/netpacketvalidator.h
    ${CMAKE_SOURCE_DIR}/src/net/senderhelper.h
    ${CMAKE_SOURCE_DIR}/src/net/sendercallback.h
    ${CMAKE_SOURCE_DIR}/src/net/serverexception.h
    ${CMAKE_SOURCE_DIR}/src/net/serveracceptinterface.h
    ${CMAKE_SOURCE_DIR}/src/net/serveraccepthelper.h
    ${CMAKE_SOURCE_DIR}/src/net/serveracceptwebhelper.h
    ${CMAKE_SOURCE_DIR}/src/net/servergame.h
    ${CMAKE_SOURCE_DIR}/src/net/servergamestate.h
    ${CMAKE_SOURCE_DIR}/src/net/serverlobbythread.h
    ${CMAKE_SOURCE_DIR}/src/net/serverbanmanager.h
    ${CMAKE_SOURCE_DIR}/src/net/servercallback.h
    ${CMAKE_SOURCE_DIR}/src/net/serveradminbot.h
    ${CMAKE_SOURCE_DIR}/src/net/serverlobbybot.h
    ${CMAKE_SOURCE_DIR}/src/net/serverircbotcallback.h
    ${CMAKE_SOURCE_DIR}/src/net/sessiondata.h
    ${CMAKE_SOURCE_DIR}/src/net/sessiondatacallback.h
    ${CMAKE_SOURCE_DIR}/src/net/sessionmanager.h
    ${CMAKE_SOURCE_DIR}/src/net/socket_helper.h
    ${CMAKE_SOURCE_DIR}/src/net/socket_msg.h
    ${CMAKE_SOURCE_DIR}/src/net/socket_startup.h
    ${CMAKE_SOURCE_DIR}/src/net/irccallback.h
    ${CMAKE_SOURCE_DIR}/src/net/ircthread.h
    ${CMAKE_SOURCE_DIR}/src/net/netexception.h
    ${CMAKE_SOURCE_DIR}/src/net/servermanager.h
    ${CMAKE_SOURCE_DIR}/src/net/transferdata.h
    ${CMAKE_SOURCE_DIR}/src/net/transferhelper.h
    ${CMAKE_SOURCE_DIR}/src/net/uploaderthread.h
    ${CMAKE_SOURCE_DIR}/src/net/uploadhelper.h
    ${CMAKE_SOURCE_DIR}/src/net/downloaderthread.h
    ${CMAKE_SOURCE_DIR}/src/net/downloadhelper.h
    ${CMAKE_SOURCE_DIR}/src/engine/local_engine/cardsvalue.h
    ${CMAKE_SOURCE_DIR}/src/engine/local_engine/localboard.h
    ${CMAKE_SOURCE_DIR}/src/engine/local_engine/localenginefactory.h
    ${CMAKE_SOURCE_DIR}/src/engine/local_engine/localhand.h
    ${CMAKE_SOURCE_DIR}/src/engine/local_engine/localplayer.h
    ${CMAKE_SOURCE_DIR}/src/engine/local_engine/localberopreflop.h
    ${CMAKE_SOURCE_DIR}/src/engine/local_engine/localberoflop.h
    ${CMAKE_SOURCE_DIR}/src/engine/local_engine/localberoturn.h
    ${CMAKE_SOURCE_DIR}/src/engine/local_engine/localberoriver.h
    ${CMAKE_SOURCE_DIR}/src/engine/local_engine/localberopostriver.h
    ${CMAKE_SOURCE_DIR}/src/engine/local_engine/tools.h
    ${CMAKE_SOURCE_DIR}/src/engine/local_engine/localbero.h
    ${CMAKE_SOURCE_DIR}/src/engine/local_engine/localexception.h
    ${CMAKE_SOURCE_DIR}/src/engine/local_engine/arraydata.h
    ${CMAKE_SOURCE_DIR}/src/engine/log.h
    ${CMAKE_SOURCE_DIR}/src/engine/network_engine/clientboard.h
    ${CMAKE_SOURCE_DIR}/src/engine/network_engine/clientenginefactory.h
    ${CMAKE_SOURCE_DIR}/src/engine/network_engine/clienthand.h
    ${CMAKE_SOURCE_DIR}/src/engine/network_engine/clientplayer.h
    ${CMAKE_SOURCE_DIR}/src/engine/network_engine/clientbero.h
    ${CMAKE_SOURCE_DIR}/src/db/serverdbcallback.h
    ${CMAKE_SOURCE_DIR}/src/db/serverdbfactory.h
    ${CMAKE_SOURCE_DIR}/src/db/serverdbinterface.h
    ${CMAKE_SOURCE_DIR}/src/db/serverdbgeneric.h
    ${CMAKE_SOURCE_DIR}/src/db/serverdbfactorygeneric.h
    ${CMAKE_SOURCE_DIR}/src/gui/qttoolsinterface.h
    ${CMAKE_SOURCE_DIR}/src/gui/generic/serverguiwrapper.h
    ${CMAKE_SOURCE_DIR}/src/net/receivebuffer.h
    ${CMAKE_SOURCE_DIR}/src/net/asioreceivebuffer.h
    ${CMAKE_SOURCE_DIR}/src/net/webreceivebuffer.h
    ${CMAKE_SOURCE_DIR}/src/net/sendbuffer.h
    ${CMAKE_SOURCE_DIR}/src/net/asiosendbuffer.h
    ${CMAKE_SOURCE_DIR}/src/net/websendbuffer.h
    ${CMAKE_SOURCE_DIR}/src/net/servermanagerfactory.h
    ${CMAKE_SOURCE_DIR}/src/net/uploadcallback.h
    ${CMAKE_SOURCE_DIR}/src/net/websocket_defs.h
    ${CMAKE_SOURCE_DIR}/src/net/websocketdata.h
    )

set(pokerth_lib_SRCS
    ${CMAKE_SOURCE_DIR}/src/engine/game.cpp
    ${CMAKE_SOURCE_DIR}/src/session.cpp
    ${CMAKE_SOURCE_DIR}/src/playerdata.cpp
    ${CMAKE_SOURCE_DIR}/src/config/configfile.cpp
    ${CMAKE_SOURCE_DIR}/src/engine/boardinterface.cpp
    ${CMAKE_SOURCE_DIR}/src/engine/enginefactory.cpp
    ${CMAKE_SOURCE_DIR}/src/engine/handinterface.cpp
    ${CMAKE_SOURCE_DIR}/src/engine/playerinterface.cpp
    ${CMAKE_SOURCE_DIR}/src/engine/berointerface.cpp
    ${CMAKE_SOURCE_DIR}/src/gui/guiinterface.cpp
    ${CMAKE_SOURCE_DIR}/src/core/common/thread.cpp
    ${CMAKE_SOURCE_DIR}/src/core/common/crypthelper.cpp
    ${CMAKE_SOURCE_DIR}/src/core/common/avatarmanager.cpp
    ${CMAKE_SOURCE_DIR}/src/core/common/pokerthexception.cpp
    ${CMAKE_SOURCE_DIR}/src/engine/local_engine/cardsvalue.cpp
    ${CMAKE_SOURCE_DIR}/src/engine/local_engine/localboard.cpp
    ${CMAKE_SOURCE_DIR}/src/engine/local_engine/localenginefactory.cpp
    ${CMAKE_SOURCE_DIR}/src/engine/local_engine/localhand.cpp
    ${CMAKE_SOURCE_DIR}/src/engine/local_engine/localplayer.cpp
    ${CMAKE_SOURCE_DIR}/src/engine/local_engine/localberopreflop.cpp
    ${CMAKE_SOURCE_DIR}/src/engine/local_engine/localberoflop.cpp
    ${CMAKE_SOURCE_DIR}/src/engine/local_engine/localberoturn.cpp
    ${CMAKE_SOURCE_DIR}/src/engine/local_engine/localberoriver.cpp
    ${CMAKE_SOURCE_DIR}/src/engine/local_engine/localberopostriver.cpp
    ${CMAKE_SOURCE_DIR}/src/engine/local_engine/localbero.cpp
    ${CMAKE_SOURCE_DIR}/src/engine/local_engine/localexception.cpp
    ${CMAKE_SOURCE_DIR}/src/engine/local_engine/arraydata.cpp
    ${CMAKE_SOURCE_DIR}/src/engine/local_engine/tools.cpp
    ${CMAKE_SOURCE_DIR}/src/engine/log.cpp
    ${CMAKE_SOURCE_DIR}/src/engine/network_engine/clientboard.cpp
    ${CMAKE_SOURCE_DIR}/src/engine/network_engine/clientenginefactory.cpp
    ${CMAKE_SOURCE_DIR}/src/engine/network_engine/clienthand.cpp
    ${CMAKE_SOURCE_DIR}/src/engine/network_engine/clientplayer.cpp
    ${CMAKE_SOURCE_DIR}/src/engine/network_engine/clientbero.cpp
    ${CMAKE_SOURCE_DIR}/src/net/common/chatcleanermanager.cpp
    ${CMAKE_SOURCE_DIR}/src/net/common/chatcleanercallback.cpp
    ${CMAKE_SOURCE_DIR}/src/net/common/clientcallback.cpp
    ${CMAKE_SOURCE_DIR}/src/net/common/clientcontext.cpp
    ${CMAKE_SOURCE_DIR}/src/net/common/clientstate.cpp
    ${CMAKE_SOURCE_DIR}/src/net/common/clientthread.cpp
    ${CMAKE_SOURCE_DIR}/src/net/common/downloadhelper.cpp
    ${CMAKE_SOURCE_DIR}/src/net/common/downloaderthread.cpp
    ${CMAKE_SOURCE_DIR}/src/net/common/netpacket.cpp
    ${CMAKE_SOURCE_DIR}/src/net/common/netpacketvalidator.cpp
    ${CMAKE_SOURCE_DIR}/src/net/common/senderhelper.cpp
    ${CMAKE_SOURCE_DIR}/src/net/common/sendercallback.cpp
    ${CMAKE_SOURCE_DIR}/src/net/common/serverexception.cpp
    ${CMAKE_SOURCE_DIR}/src/net/common/serveracceptinterface.cpp
    ${CMAKE_SOURCE_DIR}/src/net/common/serveracceptwebhelper.cpp
    ${CMAKE_SOURCE_DIR}/src/net/common/servergame.cpp
    ${CMAKE_SOURCE_DIR}/src/net/common/servergamestate.cpp
    ${CMAKE_SOURCE_DIR}/src/net/common/serverlobbythread.cpp
    ${CMAKE_SOURCE_DIR}/src/net/common/serverbanmanager.cpp
    ${CMAKE_SOURCE_DIR}/src/net/common/servercallback.cpp
    ${CMAKE_SOURCE_DIR}/src/net/common/serveradminbot.cpp
    ${CMAKE_SOURCE_DIR}/src/net/common/serverlobbybot.cpp
    ${CMAKE_SOURCE_DIR}/src/net/common/serverircbotcallback.cpp
    ${CMAKE_SOURCE_DIR}/src/net/common/sessiondata.cpp
    ${CMAKE_SOURCE_DIR}/src/net/common/sessiondatacallback.cpp
    ${CMAKE_SOURCE_DIR}/src/net/common/sessionmanager.cpp
    ${CMAKE_SOURCE_DIR}/src/net/common/socket_startup.cpp
    ${CMAKE_SOURCE_DIR}/src/net/common/clientexception.cpp
    ${CMAKE_SOURCE_DIR}/src/net/common/netcontext.cpp
    ${CMAKE_SOURCE_DIR}/src/net/common/netexception.cpp
    ${CMAKE_SOURCE_DIR}/src/net/common/irccallback.cpp
    ${CMAKE_SOURCE_DIR}/src/net/common/servermanager.cpp
    ${CMAKE_SOURCE_DIR}/src/net/common/transferhelper.cpp
    ${CMAKE_SOURCE_DIR}/src/net/common/uploaderthread.cpp
    ${CMAKE_SOURCE_DIR}/src/net/common/uploadhelper.cpp
    ${CMAKE_SOURCE_DIR}/src/gui/generic/serverguiwrapper.cpp
    ${CMAKE_SOURCE_DIR}/src/gui/qttoolsinterface.cpp
    ${CMAKE_SOURCE_DIR}/src/net/common/sendbuffer.cpp
    ${CMAKE_SOURCE_DIR}/src/net/common/asiosendbuffer.cpp
    ${CMAKE_SOURCE_DIR}/src/net/common/websendbuffer.cpp
    ${CMAKE_SOURCE_DIR}/src/net/common/receivebuffer.cpp
    ${CMAKE_SOURCE_DIR}/src/net/common/asioreceivebuffer.cpp
    ${CMAKE_SOURCE_DIR}/src/net/common/webreceivebuffer.cpp
    ${CMAKE_SOURCE_DIR}/src/net/common/uploadcallback.cpp
    )

add_library(pokerth_lib STATIC
    ${pokerth_lib_MOC_SRCS}
    ${pokerth_lib_SRCS}
    ${pokerth_lib_HDRS}
    )

qt5_use_modules(pokerth_lib Gui Core)
